Fixed pagination Y overflow that would cause pagination to be hidden if resized in some ways.

--- a/themes/IULibraries/css/style.css
+++ b/themes/IULibraries/css/style.css
@@ -996,7 +996,7 @@ th {
       display: block;
       float: left;
       margin: 12px 10px 12px 0;
-	overflow-y: hidden; }
+	overflow-y: visible; }
     .pagination input[type=text] {
       width: 3em;
       margin-right: 5px;
